# reddit_sentiment_pipeline

./: .gitignore  Dockerfile  README.md  app.py  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  spike_params.yaml  subreddit_daily_summary.csv
.github/workflows/: ci.yml  daily.yml
frontend/: __init__.py  app.py  data_utils.py  fastapi_app.py  text_analysis.py
inference/: score.py  test_score.py
notebooks/: keyword_extraction.ipynb  loading_data.ipynb  post_analysis.ipynb  spike_detection.ipynb  split_data_scored.ipynb
reddit_analysis/: __init__.py  common_metrics.py  config.yaml  config_utils.py  subreddit_daily_summary.csv  test_config.py
reddit_analysis/inference/: __init__.py  score.py
reddit_analysis/monitoring/: dashboard.json  docker-compose.yaml  docker-compose.yml  prometheus.yaml
reddit_analysis/monitoring/prometheus-data/chunks_head/: 000001  000002  000003
reddit_analysis/monitoring/prometheus-data/wal/: 00000000  00000001  00000002  00000003  00000004  00000005  00000006  00000007
reddit_analysis/scraper/: __init__.py  scrape.py
reddit_analysis/summarizer/: __init__.py  aggregator.py  summarize.py
reddit_analysis/tests/: README.md  test_config_utils.py
reddit_analysis/tests/inference/: test_score.py
reddit_analysis/tests/scraper/: test_scrape.py
reddit_analysis/tests/summarizer/: test_summarize.py
summarizer/: summarize.py  test_summarize.py
