[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit_analysis"
version = "0.1.0"
authors = [
    { name = "Halston Lim", email = "halstonblim@gmail.com" },
]
description = "A pipeline for scraping, analyzing, and summarizing Reddit data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "praw",
    "pyarrow",
    "huggingface-hub",
    "replicate",
    "python-dotenv",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools]
packages = ["reddit_analysis"] 